--- a/src/config/config.toml
+++ b/src/config/config.toml
@@ -1,14 +1,17 @@
-[architecture]
-num_layers = 2
-num_neurons = [2, 3]
-learning_rate = 0.01
-num_class_heads = 1
-activation_fn = 'relu' # 'relu' or 'sigmoid'
-output_activation = 'softmax' # 'relu' or 'sigmoid'
+[init_params]
+input_size = 2
+target_size = 1
+num_hidden_layers = 2
+num_neurons_per_hidden_layer = [3,2]
 seed = 2137
-data_path = '/Users/ben/python_projects/mini_pw/sieci_neuronowe/src/data/classification/data.simple.train.10000.csv'
-batch_size = 100
+activation_function = "relu"
+objective = "classification"
+epochs = 500
+train_data_path = "data/classification/data.simple.train.10000.csv"
 
-[training]
-num_epochs = 50
+[train_params]
 
+
+[data]
+train_data_path = "data/classification/data.three_gauss.train.10000.csv"
+test_data_path = "data/classification/data.three_gauss.test.10000.csv"
