--- a/src/config/config.toml
+++ b/src/config/config.toml
@@ -5,13 +5,13 @@ num_hidden_layers = 2
 num_neurons_per_hidden_layer = [3,2]
 seed = 2137
 activation_function = "relu"
-objective = "classification"
 epochs = 500
-train_data_path = "data/classification/data.simple.train.10000.csv"
 
 [train_params]
 
 
 [data]
-train_data_path = "data/classification/data.three_gauss.train.10000.csv"
-test_data_path = "data/classification/data.three_gauss.test.10000.csv"
+objective = "classification"
+data_dir = "data"
+data_size = 10000
+data_name = "three_gauss"
