--- a/src/config/config.toml
+++ b/src/config/config.toml
@@ -1,17 +1,12 @@
-[init_params]
-input_size = 2
-target_size = 1
-num_hidden_layers = 2
-num_neurons_per_hidden_layer = [3,2]
+neurons_per_layer = [1,6,6,1]
 seed = 2137
-activation_function = "relu"
-epochs = 500
-
-[train_params]
-
-
-[data]
-objective = "classification"
-data_dir = "data"
+activation_fn = "tanh" # relu, leaky_relu
+last_activation_fn = "linear" # sigmoid, softmax
+loss_function = "mse" # mse, binary_crossentropy, categorical_crossentropy
+epochs = 150
+learning_rate = 0.00001
+objective = "regression" # multi_classification, binary_classification, regression
+data_dir = "src/data/regression"
 data_size = 10000
-data_name = "three_gauss"
+data_name = "activation"
+data_seed = 2137
