Add saving model after training

--- a/src/config/config.toml
+++ b/src/config/config.toml
@@ -1,12 +1,12 @@
-neurons_per_layer = [1,6,6,1]
-seed = 2137
-activation_fn = "tanh" # relu, leaky_relu
-last_activation_fn = "linear" # sigmoid, softmax
-loss_function = "mse" # mse, binary_crossentropy, categorical_crossentropy
-epochs = 150
-learning_rate = 0.00001
-objective = "regression" # multi_classification, binary_classification, regression
-data_dir = "src/data/regression"
+neurons_per_layer = [784, 32,10]
+seed = 7
+activation_fn = "sigmoid" # relu, leaky_relu
+last_activation_fn = "softmax" # sigmoid, softmax
+loss_function = "categorical_crossentropy" # mse, binary_crossentropy, categorical_crossentropy
+epochs = 1
+learning_rate = 0.001
+objective = "multi_classification" # multi_classification, binary_classification, regression
+data_dir = "src/data/classification"
 data_size = 10000
-data_name = "activation"
-data_seed = 2137
+data_name = "mnist"
+data_seed = 2023
